# project-dashboard-api

./: .gitignore  API_SPEC.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: logging_config.py  main.py
app/config/: config.py
app/dashboard/: exceptions.py  repository.py  routes.py  routes_auth.py  routes_docs.py  schemas.py  service.py  service_docs.py  storage.py  storage_models.py
app/dashboard/routes/: routes_auth.py  routes_docs.py  routes_projects.py
app/dashboard/service/: helpers.py  security.py  service_core.py  service_docs.py
app/database/: db.py  models.py
app/object_storage/: client.py
config/: config.py
database/: db.py  models.py
object_storage/: client.py
tests/: conftest.py  test_auth.py  test_docs.py  test_projects.py  test_schemas.py  test_service_helpers.py
