[project]
name = "project-dashboard-api"
version = "0.1.0"
description = "A REST API for managing collaborative projects and documents"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "asyncpg==0.31.0",
    "bcrypt==4.0.1",
    "boto3==1.43.39",
    "fastapi==0.116.1",
    "passlib==1.7.4",
    "pyjwt==2.13.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "sqlalchemy==2.0.51",
    "uvicorn==0.49.0",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
